tests/core/invalid/new.cl
class Main{
  i : Int <- new ;
  main(): Object {};
}
